/*
SPDX-FileCopyrightText: 2020-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: LicenseRef-ONF-Member-1.0
*/

syntax = "proto3";

// Package xapp defines the interior gRPC interfaces for xApps to interact with E2T.
package xapp.v1;

import "google/protobuf/duration.proto";
import "github.com/onosproject/onos-e2t/api/headers/v1/headers.proto";



// ResponseStatus
enum ResponseStatus {
    FAILED = 0;
    SUCCESSFUL = 1;
}

// SubscribeRequest a subscription request
message SubscribeRequest {

}

message Indication {

}


// SubscribeResponse a subscription response
message SubscribeResponse {
    ResponseStatus status = 1;
}


// SubscribeDeleteRequest a subscription delete request
message SubscribeDeleteRequest {
    // TODO fields should be defined

}

// SubscribeDeleteResponse a subscription delete response
message SubscribeDeleteResponse {
    ResponseStatus status = 1;

}

// AppRequest
message AppRequest {
    headers.v1.RequestHeader header = 1;
    oneof req {
        SubscribeRequest sub_req = 2;
        SubscribeDeleteRequest sub_del_req = 3;

    }
    bytes payload = 4;
}


// AppResponse
message AppResponse {
    headers.v1.RequestHeader header = 1;
    oneof resp {
        SubscribeResponse sub_resp = 2;
        SubscribeDeleteResponse sub_del_resp = 3;
        Indication indication = 4;

    }
    bytes payload = 5;
}

// E2TService provides means for enhanced interactions with the ONOS RIC E2 Termination service.
service E2TService {
    // List of registered/available SMs

    // RegisterApp establishes a bi-directional stream for conducting interactions with the E2 nodes in the RAN environment.
    rpc RegisterApp (stream AppRequest) returns (stream AppResponse);
}
